tests/ui/union/basic/union-empty.rs
// 1.2.2.
union U {} //~ ERROR unions cannot have zero fields

fn main() {}